fix layout issues for larger screens

--- a/source/css/pages/home.sass
+++ b/source/css/pages/home.sass
@@ -309,7 +309,7 @@
 
 .controls-wrapper
 	@media only screen and (min-width: $third-break)
-		min-height: 650px
+		min-height: 570px
 
 
 
